--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Telegram Voice Chat Bot",
-  "description": "Telegram Voice-Chat Bot Written In Python Using Pytgcalls & Pyrogram.",
-  "repository": "https://github.com/thehamkercat/Telegram_VC_Bot",
-  "logo": "https://i.imgur.com/8S8NVy0.png",
+  "name": "Tesla MusicBot",
+  "description": "Telegram VoiceChat Bot, Written In Python Using Pytgcalls & Pyrogram.",
+  "repository": "https://github.com/MadBoy-X/MusicBot",
+  "logo": "https://imgur.com/HYdV6PJ.png",
   "keywords": [
     "python",
     "telegram",
